multicontainer_project/k8ss/client-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
  namespace: application
spec:
  selector:
    component: web
  ports:
  - port: 3000
    targetPort: 3000
