multicontainer_project/k8ss/postgres-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-cluster-ip-service
  namespace: application
spec:
  selector:
    component: postgres
  ports:
  - port: 5432
    targetPort: 5432
