multicontainer_project/k8ss/redis-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-cluster-ip-service
  namespace: application
spec:
  selector:
    component: redis
  ports:
  - port: 6379
    targetPort: 6379
