multicontainer_project/k8ss/server-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip-service
  namespace: application
spec:
  selector:
    component: server
  ports:
  - port: 5000
    targetPort: 5000
